added info to about section

--- a/about.html
+++ b/about.html
@@ -41,8 +41,21 @@
     </div>
 
     <div class="container">
-        <p>Alex Gray</p>
-    </div>
+		<img src="images/AlexProfessionalPhoto.png" style="display:inline;" width="200" height="200">
+    	<div id="name" style="display:inline; white-space:nowrap;"> 
+        	Alex Gray 
+    	</div>
+		<div id="texts"> 
+        	Alex Gray is a student at the University of Utah pursuing 
+			a Bachelor of Science degree with a major in Computer 
+			Engineering and a minor in Arts Technology. He has done 
+			work with digital system design and software development 
+			for the digital media and arts industry, including image 
+			and audio processing as well as interactive graphics. He 
+			also has experience in photography, electronic music 
+			production, and graphic design.
+    	</div>
+	</div>
 
     <footer class="footer border-top text-center p-4">
         <div>&copy; 2023 - Beverly Yee & Alex Gray</div>
