Added to About page (BY)

--- a/about.html
+++ b/about.html
@@ -37,7 +37,14 @@
     <br />
 
     <div class="container">
-        <p>Beverly Yee</p>
+        <p>
+            <img src="images/BevPic.jpg" alt="Beverly Yee picture" width="200" />
+            A 2<sup>nd</sup> generation Chinese-American, Beverly Yee is a senior at the University
+            of Utah pursing a Bachelor of Science degree in Computer Engineering. Her specialty lies
+            in web programming and digital media, but has worked with computer hardware, digital
+            system design, and software development. Beverly has experience with graphic art design
+            and does sketch/digital art as a hobby. 
+        </p>
     </div>
 
     <div class="container">
