Added repo link onto front page (BY)

--- a/about.html
+++ b/about.html
@@ -37,32 +37,40 @@
     <br />
 
     <div class="container">
-        <p>
-            <img src="images/BevPic.jpg" alt="Beverly Yee picture" width="200" />
-            A 2<sup>nd</sup> generation Chinese-American, Beverly Yee is a senior at the University
-            of Utah pursing a Bachelor of Science degree in Computer Engineering. Her specialty lies
-            in web programming and digital media, but has worked with computer hardware, digital
-            system design, and software development. Beverly has experience with graphic art design
-            and does sketch/digital art as a hobby. 
-        </p>
+        <div class="row">
+            <div class="column">
+                <img src="images/BevPic.jpg" class="mr-3" alt="Beverly Yee picture" width="200" align="left" />
+                <p><br/></p>
+                <p>
+                    A 2<sup>nd</sup> generation Chinese-American, Beverly Yee is a senior at the University
+                    of Utah pursing a Bachelor of Science degree in Computer Engineering. Her specialty lies
+                    in web programming and digital media, but has worked with computer hardware, digital
+                    system design, and software development. Beverly has experience with graphic art design
+                    and does sketch/digital art as a hobby. 
+                </p>
+            </div>
+        </div>
+        <p><br/></p>
+        <div class="row">
+            <div class="column">
+                <img src="images/AlexProfessionalPhoto.png" width="200" height="200">
+                <div id="name" style="display:inline; white-space:nowrap;"> 
+                    Alex Gray 
+                </div>
+                <div id="texts"> 
+                    Alex Gray is a student at the University of Utah pursuing 
+                    a Bachelor of Science degree with a major in Computer 
+                    Engineering and a minor in Arts Technology. He has done 
+                    work with digital system design and software development 
+                    for the digital media and arts industry, including image 
+                    and audio processing as well as interactive graphics. He 
+                    also has experience in photography, electronic music 
+                    production, and graphic design.
+                </div>
+            </div>
+        </div>
+        <p><br/></p>
     </div>
-
-    <div class="container">
-		<img src="images/AlexProfessionalPhoto.png" style="display:inline;" width="200" height="200">
-    	<div id="name" style="display:inline; white-space:nowrap;"> 
-        	Alex Gray 
-    	</div>
-		<div id="texts"> 
-        	Alex Gray is a student at the University of Utah pursuing 
-			a Bachelor of Science degree with a major in Computer 
-			Engineering and a minor in Arts Technology. He has done 
-			work with digital system design and software development 
-			for the digital media and arts industry, including image 
-			and audio processing as well as interactive graphics. He 
-			also has experience in photography, electronic music 
-			production, and graphic design.
-    	</div>
-	</div>
 
     <footer class="footer border-top text-center p-4">
         <div>&copy; 2023 - Beverly Yee & Alex Gray</div>
