--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
 	<br />
 
 	<div class="container">
-		<p>Project Info</p>
+		<h2>Mission Statement</h2>
+		<p>The Bellagio's mini-me: a dance of water fountains to the beat of any chosen 
+			musical piece and is highlighted by LEDs. The height of the water and the 
+			intensity or color of the LEDs is determined by the frequency/pitch of the 
+			music. Visualize the Invisible.
+		</p>
+		<br/>
+		<h2>Project Info</h2>
+		<p>
+			<a href="https://github.com/BYee7127/public_html.git">Github Repository</a>
+		</p>
+		<br/>
 	</div>
 
 	<footer class="footer border-top text-center p-4">
