Updated website with current info (BY)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 					</li>
 					<li class="nav-item border-right border-dark mr-3 ml-3"></li>
 					<li class="nav-item">
+						<a class="nav-link text-dark" href="datasheets.html">Datasheets</a>
+					</li>
+					<li class="nav-item border-right border-dark mr-3 ml-3"></li>
+					<li class="nav-item">
 						<a class="nav-link text-dark" href="about.html">About</a>
 					</li>
 				</ul>
@@ -51,11 +55,71 @@
 			music. Visualize the Invisible.
 		</p>
 		<br/>
+
+		<h2>Prototype</h2>
+		<center>
+			<video controls>
+				<source src="images/VID_20230427_124749718.mp4" type="video/mp4">
+			</video>
+		</center>
+		<p><br/></p>
+
 		<h2>Project Info</h2>
 		<p>
 			<a href="https://github.com/BYee7127/public_html.git">Github Repository</a>
 		</p>
+		<h3>Final Product Sketches</h3>
+		<h4><u>Side View/Cross-section</u></h4>
+		<img src="images/FinalSketchSide.png" alt="Sketch of the final product from the side." height="700px"/>
+		<ol>
+			<li>
+				Either use the other 2 trays (with the bottom cut out) to encase the water or get some stiff vinyl and support the entire structure. Make sure to keep the top open or at least create a lid such that the contents of the bottom are accessible.
+			</li>
+			<li>
+				These two trays are the exact same. The top one is just flipped upside down with the bottom cut off except for about 1" from the edge.
+			</li>
+			<li>
+				Stand made from a few pieces of custom-cut acrylic to raise the encapsulation and allow wires to pass underneath.
+			</li>
+		</ol>
 		<br/>
+
+		<h4><u>Top-down View - Layer 1</u></h4>
+		Also referred to as the service box, this is the area where all the circuits live. The image does not show everything - it only shows the part that is connected to the project. What is missing are the LED driver, input, and speakers. To be added as the project continues. <br/>
+		<img src="images/FSTopServiceBox.png" alt="Sketch of the service box." height="550px" />
+		<p><br/></p>
+
+		<h4><u>Top-down View - Layer 2</u></h4>
+		Also referred to as the tank. Area where the water is filled and the pumps placed.
+		<img src="images/FSTopPump.png" alt="Sketch of the pump layer" height="700px" />
+		<ol>
+			<li>
+				Outlet or spout of the pump. Tubes are connected to this to direct the water.
+			</li>
+			<li>
+				The bottom of the contianer is slightly smaller than its opening... If all 4 trays are used in the building of the encapsulation, the final look will not be straight.
+			</li>
+			<li>
+				The pumps may need some adhesive to stay in the same spot. The prototype demo, however, has shown that the pump stays fairly well in place.
+			</li>
+			<li>
+				Right here is a small hole that is just barely big enough to let the pump wires through. It will be filled with waterproof glue/sealant afterwards to make sure the water stays in the tank.
+			</li>
+		</ol>
+		<p><br/></p>
+
+		<h4><u>Top-down View - Layer 3</u></h4>
+		The stage. Here is where the focus of the project is, the water and light dance. The sketch mainly shows the area where the tubes protrude from underneath. Missing from the sketch is the LED strip which, for now, will be lined around the edge of the stage.<br/>
+		<img src="images/FSTopTubes.png" alt="Sketch of the stage layer." height="650px" />
+		<ol>
+			<li>
+				Open area where the water falls through and back down into the tank to be reused.
+			</li>
+			<li>
+				These are the openings for the tubes to protrude and be glued into place. They are placed slightly more inward than the pump spouts to give an arc to the water column. They will need to be adjusted such that the water columns all meet in the center when every pump is operating at max.
+			</li>
+		</ol>
+		<p><br/></p>
 	</div>
 
 	<footer class="footer border-top text-center p-4">
