--- a/meeting.html
+++ b/meeting.html
@@ -34,6 +34,10 @@
 						</li>
 						<li class="nav-item border-right border-dark mr-3 ml-3"></li>
 						<li class="nav-item">
+							<a class="nav-link text-dark" href="datasheets.html">Datasheets</a>
+						</li>
+						<li class="nav-item border-right border-dark mr-3 ml-3"></li>
+							<li class="nav-item">
 							<a class="nav-link text-dark" href="about.html">About</a>
 						</li>
 					</ul>
@@ -44,10 +48,61 @@
 
         <div class="container">
             <h2>Meetings</h2>
-            Date
+            2023-Apr-25
             <ul>
-                <li>Items discussed</li>
+                <li>Hooking up the pump to test the circuit again before demo.</li>
+				<ul>
+					<li><i>Demo did not work.</i></li>
+					<li>Discovered the STMCube does not like Alex and erased previous settings for the Discovery Board.</li>
+					<li>Also discovered that the PWM on the Discovery Board reads a range for 16 bits while the potentiometer outputs nowhere near as high.</li>
+				</ul>
             </ul>
+
+			2023-Apr-19
+			<ul>
+				<li>Creating the cricuit for the prototype based off of examples found online.</li>
+				<li>First tested to see if the pump works in general (it does), but at the same time, didn't run it for too long to prevent damage (cannot operate outside of water for very long).</li>
+				<li>Tested circuit using an LED first to see if it can be dimmed via potentiometer.</li>
+			</ul>
+
+			2023-Mar-30
+			<ul>
+				<li>Alex finished prototype schematic.</li>
+				<li>Searching for additional materials needed, such as sealant and waterproof adhesive.</li>
+			</ul>
+
+			2023-Mar-23
+			<ul>
+				<li>Continued working on the proposal...</li>
+			</ul>
+
+			2023-Mar-21
+			<ul>
+				<li>Created Gantt chart for initial proposal paper.</li>
+				<li>Acrylic trays for encapsulation shipped.</li>
+				<li>Fiddled with LaTex formatting to get the graphics to appear (used the wrong compiler. Should have been using pdfLaTex).</li>
+			</ul>
+
+			2023-Feb-28
+			<ul>
+				<li>Began presentation slides for the abstract.</li>
+				<li>Began initial sketches for the slides.</li>
+				<li>Continue looking for ideal pumps.</li>
+			</ul>
+
+			2023-Feb-22
+			<ul>
+				<li>Created this website.</li>
+				<li>Created the github repository housing both the website and code to run the project.</li>
+			</ul>
+
+			2023-Feb-17
+			<ul>
+				<li>Discussion of the Mission Statement.</li>
+				<li>Began looking for submersible LEDs and other options.</li>
+			</ul>
+
+			<p><br/></p>
         </div>
 
 		<footer class="footer border-top text-center p-4">
