--- a/about.html
+++ b/about.html
@@ -30,7 +30,11 @@
 					<li class="nav-item">
 						<a class="nav-link text-dark" href="datasheets.html">Datasheets</a>
 					</li>
-					<li class="nav-item border-right border-dark mr-3 ml-3"></li>
+                    <li class="nav-item border-right border-dark mr-3 ml-3"></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="expenses.html">Expense Tracker</a>
+                    </li>
+                    <li class="nav-item border-right border-dark mr-3 ml-3"></li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="about.html">About</a>
                     </li>
