--- a/meeting.html
+++ b/meeting.html
@@ -36,8 +36,12 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" href="datasheets.html">Datasheets</a>
 						</li>
+                        <li class="nav-item border-right border-dark mr-3 ml-3"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="expenses.html">Expense Tracker</a>
+                        </li>
 						<li class="nav-item border-right border-dark mr-3 ml-3"></li>
-							<li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link text-dark" href="about.html">About</a>
 						</li>
 					</ul>
