Added meeting info (BCY)

--- a/expenses.html
+++ b/expenses.html
@@ -212,7 +212,7 @@
                         <td>4 extra.</td>
                     </tr>
                     <tr>
-                        <th>15</th>
+                        <th>14</th>
                         <td>Fees</td>
                         <td></td>
                         <td>2023-May-06</td>
@@ -222,10 +222,32 @@
                         <td>$11.45</td>
                         <td>Shipping ($4.99), tarrif ($2.45), and tax ($4.01).</td>
                     </tr>
+                    <tr>
+                        <th>15</th>
+                        <td>Solder Paste</td>
+                        <td>B075ZR52JM</td>
+                        <td>2023-May-12</td>
+                        <td>Amazon</td>
+                        <td></td>
+                        <td></td>
+                        <td>$12.82</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+                    <tr>
+                        <th>16</th>
+                        <td>LED strip light + power adapter</td>
+                        <td></td>
+                        <td>2023-May-29</td>
+                        <td>Adafruit</td>
+                        <td></td>
+                        <td></td>
+                        <td>$73.96</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
                 </tbody>
                 <tr>
                     <th colspan="7" class="text-right">Total:</th>
-                    <td colspan="2">$277.95</td>
+                    <td colspan="2">$364.73</td>
                 </tr>
             </table>
             <p><br/></p>
