--- a/meeting.html
+++ b/meeting.html
@@ -52,6 +52,71 @@
 
         <div class="container">
             <h2>Meetings</h2>
+			2023-May-29
+			<ul>
+				<li>Figured out the dimensions of the top and bottom of the trays
+					<ul>
+						<li>Top = 25.1 cm</li>
+						<li>Bottom = 24.85 cm</li>
+						<li>Side height = 6 cm</li>
+						<li>Bottom thickness = 2.5 mm</li>
+						<li>Side thickness = 3.5-4 mm</li>
+						<li>Center is about 1 cm higher than the bottom edge</li>
+					</ul>
+				</li>
+				<li>Started on order for LED strip - $73.96, June 5th arrival date
+					<ul>
+						<li>LEDs will sit on top of the pump area</li>
+					</ul>
+				</li>
+				<li>Soldered on resistors using heat gun and solder paste
+					<ul>
+						<li>use tweezers to apply a good enough amount of paste onto the pads</li>
+						<li>direct the heat gun over the component and keep it there until the solder bubbles and shrinks</li>
+						<li>CAUTION: BOARD WILL BE <b><u>******HOT******</u></b></li>
+					</ul>
+				</li>
+				<li>Will need to create vector file for cutting the trays
+					<ul>
+						<li>reduce speed of laser such that it can cut through the curved tray of the bottom.</li>
+						<li>Top tray of pump area = leave a 1-1.5” edge around the center for the tubes to go through.
+							<ul>
+								<li>Also cut out holes for tubes = roughly 7mm</li>
+							</ul>
+						</li>
+						<li>Stage area = one of the trays, cut the entire bottom out
+							<ul>
+								<li>account for the thickness of the sides of the tray</li>
+							</ul>
+						</li>
+						<li>Stand/Service box = split the sheet in half lengthwise then cut out curvature of the bottom (?)</li>
+					</ul>
+				</li>
+				<li>NeoPixel silicon LED strip
+					<ul>
+						<li><a href="https://www.adafruit.com/product/3869">https://www.adafruit.com/product/3869</a></li>
+						<li>Thicker version with standard trajectory for lighting</li>
+						<li>not ideal for dunking underwater or long term outdoor exposure</li>
+						<li>Durable enough for projects to survive the outdoors</li>
+					</ul>
+				</li>
+			</ul>
+
+			2023-May-15
+			<ul>
+				<li>
+					Soldered wires to the pump wires such that it'd be easier to attach them to the circuit board.
+					<img src="images/SolderedPumps" />
+				</li>
+				<li>For security of the solder, added heat shrink tubing around the joint.</li>
+				<li>Fitted plastic tubing over outlet of the pumps.</li>
+				<li>Started looking into LED strlps again
+					<ul>
+						<li>Found a site called Solid Apollo that may have something</li>
+					</ul>
+				</li>
+			</ul>
+
             2023-Apr-25
             <ul>
                 <li>Hooking up the pump to test the circuit again before demo.</li>
