Adjusted image height (BCY)

--- a/meeting.html
+++ b/meeting.html
@@ -106,7 +106,7 @@
 			<ul>
 				<li>
 					Soldered wires to the pump wires such that it'd be easier to attach them to the circuit board.
-					<img src="images/SolderedPumps" />
+					<img src="images/SolderedPumps" height="500px" />
 				</li>
 				<li>For security of the solder, added heat shrink tubing around the joint.</li>
 				<li>Fitted plastic tubing over outlet of the pumps.</li>
