--- a/water/MDK-ARM/water/water.build_log.htm
+++ b/water/MDK-ARM/water/water.build_log.htm
@@ -21,42 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\agray\Documents\alex stuff\academic stuff\capstone\water\MDK-ARM\water.uvprojx
-Project File Date:  04/25/2023
+C:\Users\agray\Documents\alex stuff\academic stuff\capstone\public_html\Website\water\MDK-ARM\water.uvprojx
+Project File Date:  06/19/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'water'
-compiling stm32f0xx_it.c...
-compiling stm32f0xx_hal_adc_ex.c...
-assembling startup_stm32f072xb.s...
-compiling stm32f0xx_hal.c...
-compiling stm32f0xx_hal_msp.c...
 compiling main.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_adc.c...
-compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal_i2c_ex.c...
-compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_ll_usb.c...
-compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_cortex.c...
-compiling stm32f0xx_hal_pwr.c...
-compiling stm32f0xx_hal_pwr_ex.c...
-compiling stm32f0xx_hal_flash.c...
-compiling stm32f0xx_hal_exti.c...
-compiling stm32f0xx_hal_flash_ex.c...
-compiling stm32f0xx_hal_spi_ex.c...
-compiling stm32f0xx_hal_pcd_ex.c...
-compiling stm32f0xx_hal_tsc.c...
-compiling system_stm32f0xx.c...
-compiling stm32f0xx_hal_i2c.c...
-compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_spi.c...
-compiling stm32f0xx_hal_pcd.c...
-compiling stm32f0xx_hal_tim.c...
 linking...
-Program Size: Code=9178 RO-data=274 RW-data=12 ZI-data=2788  
+Program Size: Code=9750 RO-data=274 RW-data=12 ZI-data=2916  
 FromELF: creating hex file...
 "water\water.axf" - 0 Error(s), 0 Warning(s).
 
@@ -82,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
