Added meetings from June, July (BCY)

--- a/meeting.html
+++ b/meeting.html
@@ -52,6 +52,45 @@
 
         <div class="container">
             <h2>Meetings</h2>
+			2023-July-10
+			<ul>
+				<li>Re-soldered LED strip adapter to have another wire for ground to the circuit.
+					<ul>
+						<li>The entire circuit must share a common ground for them to all work together.</li>
+					</ul>
+				</li>
+				<li>Began looking into programming PWM for circuit.</li>
+				<li>Planning for cutting point of the LED strip.
+					<ul>
+						<li>Is it possible to cut it?</li>
+						<li>Once it's cut, how to waterproof the end in case water splashes up where it shouldn't?</li>
+						<li><a href="https://forums.adafruit.com/viewtopic.php?p=978674#p978674">Answer!</a> Yay!</li>
+					</ul>
+				</li>
+			</ul>
+
+			2023-July-3
+			<ul>
+				<li>Started laser cutting - tried to; computer did not move past a certain screen.</li>
+				<li>Figured placement of the tubes for maximum capacity - roughly 18 pumps max.</li>
+				<li>Soldered adapter to LED strips so it can receive power.</li>
+				<li>Soldered a wire for DATAIN wire of LED for ease of access.</li>
+				<li>Looking at PWM chip datasheet on LED to see how it works.</li>
+			</ul>
+
+			2023-June-19
+			<ul>
+				<li>Began drawing up vector image for laser cutter.</li>
+				<li>Starting code for PWM on all 12 pumps - works when plugging in as LEDs</li>
+			</ul>
+
+			2023-June-5
+			<ul>
+				<li>Cleaned leftover solder/flux off board.</li>
+				<li>Began soldering all other components - finishing the entire board.</li>
+				<li>Tested all pumps after solder - working well when tested individually.</li>
+			</ul>
+
 			2023-May-29
 			<ul>
 				<li>Figured out the dimensions of the top and bottom of the trays
@@ -69,7 +108,9 @@
 						<li>LEDs will sit on top of the pump area</li>
 					</ul>
 				</li>
-				<li>Soldered on resistors using heat gun and solder paste
+				<li>Soldered on resistors using heat gun and solder paste<br/>
+					<img src="images/ASolderedResistor" height="600px" /><br/>
+					<img src="images/PumpDriverwResistors" height="600px" />
 					<ul>
 						<li>use tweezers to apply a good enough amount of paste onto the pads</li>
 						<li>direct the heat gun over the component and keep it there until the solder bubbles and shrinks</li>
@@ -102,12 +143,11 @@
 				</li>
 			</ul>
 
-			2023-May-15
+			2023-May-15<br/>
+			<img src="images/SolderedPumps" height="600px" />
 			<ul>
 				<li>
-					Soldered wires to the pump wires such that it'd be easier to attach them to the circuit board.
-					<img src="images/SolderedPumps" height="500px" />
-				</li>
+					Soldered wires to the pump wires such that it'd be easier to attach them to the circuit board.				</li>
 				<li>For security of the solder, added heat shrink tubing around the joint.</li>
 				<li>Fitted plastic tubing over outlet of the pumps.</li>
 				<li>Started looking into LED strlps again
