multiple channels of pwm output

--- a/water/MDK-ARM/water/water.build_log.htm
+++ b/water/MDK-ARM/water/water.build_log.htm
@@ -22,14 +22,15 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 C:\Users\agray\Documents\alex stuff\academic stuff\capstone\public_html\Website\water\MDK-ARM\water.uvprojx
-Project File Date:  06/19/2023
+Project File Date:  07/10/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'water'
+assembling startup_stm32f072xb.s...
 compiling main.c...
 linking...
-Program Size: Code=9750 RO-data=274 RW-data=12 ZI-data=2916  
+Program Size: Code=12570 RO-data=274 RW-data=12 ZI-data=2300  
 FromELF: creating hex file...
 "water\water.axf" - 0 Error(s), 0 Warning(s).
 
