Updated website to reflect current status (BCY)

--- a/datasheets.html
+++ b/datasheets.html
@@ -55,6 +55,7 @@
             The following list contains the datasheets to all parts used in the prototype and final product.
             <br/><br/>
             <ul>
+                <li><a href="https://adafruit.github.io/Adafruit_NeoPixel/html/class_adafruit___neo_pixel.html" target="_blank">NeoPixel documentation</a></li>
                 <li>
                     <a href="https://www.yageo.com/upload/media/product/productsearch/datasheet/rchip/PYu-RC_Group_51_RoHS_L_12.pdf" target="_blank" rel="noreferrer noopener">
                         Surface Mount Resistors
