--- a/index.html
+++ b/index.html
@@ -60,7 +60,57 @@
 		</p>
 		<br/>
 
-		<h2>Prototype</h2>
+		<h2>Project Info</h2>
+		<p>Quick Links</p>
+		<ul>
+			<li><a href="https://github.com/BYee7127/public_html.git" target="_blank">Github Repository</a></li>
+			<li><a href="#Features">Features</a></li>
+			<li><a href="#Progress">Progress (Pictures Only)</a>
+				<ul>
+					<li><a href="#Stage1">Stage 1</a>
+					<li><a href="#Stage2">Stage 2</a></li>
+					<li><a href="#Stage3">Stage 3</a></li>
+				</ul>
+			</li>
+			<li><a href="#Prototype">Prototype</a></li>
+			<li><a href="#FinalSketches">Final Product Sketches</a></li>
+		</ul>
+		<br/>
+
+		<h3 id="Features">Features</h3>
+		<ul>
+			<li>Mono audio.</li>
+			<li>LCD screen to show uploding progress (possible).</li>
+			<li>Pulsing LED around the edge.</li>
+			<li>Water stream just behind the LED strip to meet in the center.</li>
+		</ul>
+		<br/>
+
+		<h3 id="Progress">Progress (Pictures only)</h3>
+		<h4 id="Stage3"><u>Stage 3</u></h4>
+		<center>
+			<img src="images/LEDStripLightTest.jpg" height="500px" style="margin: 20px" />
+			<img src="images/StagePreview.jpg" height="500px" style="margin: 20px" />
+		</center>
+		<h4 id="Stage2"><u>Stage 2</u></h4>
+		<center>
+			<img src="images/CutOutTrays.jpg" height="500px" style="margin: 20px" />
+			<img src="images/AssembledEnclosure.jpg" height="500px" style="margin: 20px" />
+			<img src="images/AssembledEnclosure_TopView.jpg" height="500px" style="margin: 20px" />
+			<img src="images/PumpsPositioned.jpg" height="500px" style="margin: 20px" />
+			<img src="images/PumpsPositions_TopView.jpg" height="500px" style="margin: 20px" />
+		</center>
+		<h4 id="Stage1"><u>Stage 1</u></h4>
+		<center>
+			<img src="images/AllResistorsFinished.jpg" height="500px" style="margin: 20px" />
+			<img src="images/FinishedDriverx2.jpg" height="500px" style="margin: 20px" />
+			<img src="images/CompletedCircuitBoard.jpg" height="500px" style="margin: 20px" />
+			<img src="images/CircuitTestWithLEDs.jpg" height="500px" style="margin: 20px" />
+		</center>
+		<p><br/></p>
+
+		<h3 id="Prototype">Prototype</h3>
+		<p>Prototype demonstrates the ability to control the water flow using a potentiometer on a single pump. The circuit used to control a single pump is replicated many times to control multiple, so if a single pump works, the multiple should as well. The one thing to watch out for is how much power is needed to power the drivers and/or pumps.</p>
 		<center>
 			<video controls>
 				<source src="images/VID_20230427_124749718.mp4" type="video/mp4">
@@ -68,11 +118,7 @@
 		</center>
 		<p><br/></p>
 
-		<h2>Project Info</h2>
-		<p>
-			<a href="https://github.com/BYee7127/public_html.git">Github Repository</a>
-		</p>
-		<h3>Final Product Sketches</h3>
+		<h3 id="FinalSketches">Final Product Sketches</h3>
 		<h4><u>Side View/Cross-section</u></h4>
 		<img src="images/FinalSketchSide.png" alt="Sketch of the final product from the side." height="700px"/>
 		<ol>
