--- a/expenses.html
+++ b/expenses.html
@@ -244,10 +244,43 @@
                         <td>$73.96</td>
                         <td>Shipping and tax included.</td>
                     </tr>
+					<tr>
+                        <th>17</th>
+                        <td>Contour tool</td>
+                        <td></td>
+                        <td>2023-April-19</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>$11.79</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+					<tr>
+						<th>18</th>
+                        <td>Kobalt shop shears</td>
+                        <td>961371</td>
+                        <td>2023-July-13</td>
+                        <td>Lowe's</td>
+                        <td></td>
+                        <td></td>
+						<td>$12.53</td>
+						<td>Total reflects 10% employee discount.</td>
+					</tr>
+					<tr>
+                        <th>19</th>
+                        <td>electronic silicone</td>
+                        <td></td>
+                        <td>2023-August-7</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>$10.67</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
                 </tbody>
                 <tr>
                     <th colspan="7" class="text-right">Total:</th>
-                    <td colspan="2">$364.73</td>
+                    <td colspan="2">$399.72</td>
                 </tr>
             </table>
             <p><br/></p>
