--- a/expenses.html
+++ b/expenses.html
@@ -58,7 +58,7 @@
                     <tr>
                         <th></th>
                         <th>Item</th>
-                        <th>Item #</th>
+                        <th>Item/ASIN#</th>
                         <th>Purchase Date</th>
                         <th>Vendor</th>
                         <th>Qty</th>
@@ -228,7 +228,7 @@
                         <td>B075ZR52JM</td>
                         <td>2023-May-12</td>
                         <td>Amazon</td>
-                        <td></td>
+                        <td>1</td>
                         <td></td>
                         <td>$12.82</td>
                         <td>Shipping and tax included.</td>
@@ -239,7 +239,7 @@
                         <td>3869</td>
                         <td>2023-May-29</td>
                         <td>Adafruit</td>
-                        <td></td>
+                        <td>1</td>
                         <td></td>
                         <td>$73.96</td>
                         <td>Shipping and tax included.</td>
@@ -250,7 +250,7 @@
                         <td></td>
                         <td>2023-April-19</td>
                         <td></td>
-                        <td></td>
+                        <td>1</td>
                         <td></td>
                         <td>$11.79</td>
                         <td>Shipping and tax included.</td>
@@ -261,7 +261,7 @@
                         <td>961371</td>
                         <td>2023-July-13</td>
                         <td>Lowe's</td>
-                        <td></td>
+                        <td>1</td>
                         <td></td>
 						<td>$12.53</td>
 						<td>Total reflects 10% employee discount.</td>
@@ -272,15 +272,48 @@
                         <td></td>
                         <td>2023-August-7</td>
                         <td></td>
-                        <td></td>
+                        <td>1</td>
                         <td></td>
                         <td>$10.67</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+					<tr>
+                        <th>20</th>
+                        <td>Audio Adapter (Aux to Aux / Lightning / USB-C)</td>
+                        <td>B0994FL13N</td>
+                        <td>2023-August-31</td>
+                        <td>Amazon</td>
+                        <td>1</td>
+                        <td>$11.99</td>
+                        <td>$13.25</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+					<tr>
+                        <th>21</th>
+                        <td>PLA Filament 2.85mm black</td>
+                        <td>B08QMM8T2S</td>
+                        <td>2023-August-7</td>
+                        <td>Amazon</td>
+                        <td>1</td>
+                        <td>$20.99</td>
+                        <td>$22.51</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+					<tr>
+                        <th>22</th>
+                        <td>H-Clip PVC flex hinge</td>
+                        <td>B09HJD1X3F</td>
+                        <td>2023-August-31</td>
+                        <td>Amazon</td>
+                        <td>1</td>
+                        <td>$23.99</td>
+                        <td>$25.73</td>
                         <td>Shipping and tax included.</td>
                     </tr>
                 </tbody>
                 <tr>
                     <th colspan="7" class="text-right">Total:</th>
-                    <td colspan="2">$399.72</td>
+                    <td colspan="2">$461.21</td>
                 </tr>
             </table>
             <p><br/></p>
