Added some updates (BCY)

--- a/meeting.html
+++ b/meeting.html
@@ -52,6 +52,110 @@
 
         <div class="container">
             <h2>Meetings</h2>
+			2023-October-17
+			<ul>
+				<li>Check over fall break of the print revealed the print ran out of filament roughly halfway through.
+					<ul>
+						<li>Entirety of the stand printed okay.</li>
+						<li>1 3/4" (44.45mm) of pool cover was printed - will need to have a seam as to not waste printed material (and thus money).</li>
+					</ul>
+				</li>
+			</ul>
+			
+			2023-October-5
+			<ul>
+				<li>Presentation day</li>
+				<li>Began print for the pool cover and stand (the main stand of the enclosure that holds up the trays).</li>
+				<li>Need to reduce/increase size of certain joints (mostly all, though...).
+					<ul>
+						<li>[&#10003;] Reduce speaker side connection to pool stand.
+							<ul>
+								<li>Initial test had the joint come out the same size for both sides of the joint.</li>
+							</ul>
+						</li>
+						<li>[] Reduce pin by 0.2mm.</li>
+					</ul>
+				</li>
+			</ul>
+			
+			2023-October-3
+			<ul>
+				<li>Class presentations</li>
+				<li>Began 3D test print of connections and speaker hole.</li>
+			</ul>
+			
+			2023-September-28
+			<ul>
+				<li>Did a test print of the top of the pool cover to check the size around the tray and the track.</li>
+				<li>Due to the flimsiness of the top of the track, the decision was made to not use the track.
+					<ul>
+						<li>Instead, reduce the height of half of the pool cover by a little bit for the lid to sit on.</li>
+						<li>Do the same for the rest of the encapsulation - will use previously bought flex tracks as holder for the lid.`</li>
+					</ul>
+				</li>
+				<li><b><u>Need to add a hole for the LED wires to come out.</u></b>
+					<ul>
+						<li>Size of hole from the tray is about 13mm x 13mm.</li>
+						<li>Cut out a space from the top of the pool cover down to position of LED wires and make it 15mm wide.</li>
+					</ul>
+				</li>
+			</ul>
+			
+			2023-September-26
+			<ul>
+
+			</ul>
+			
+			2023-September-21
+			<ul>
+
+			</ul>
+			
+			2023-September-19
+			<ul>
+
+			</ul>
+			
+			2023-September-14
+			<ul>
+				<li>Connected PWM to the PCB driver.</li>
+			</ul>
+			
+			2023-September-12
+			<ul>
+				<li>Began 3D designs</li>
+			</ul>
+			
+			2023-September-7
+			<ul>
+
+			</ul>
+			
+			2023-September-5
+			<ul>
+				<li>Cut out the final tray - put a hole in the center of the stage area for water to fall through.</li>
+				<li>Assembled the pool area - put the tubes through the holes</li>
+			</ul>
+			
+			2023-August-31
+			<ul>
+				<li>More research into 3D printing</li>
+				<li>Used Dremel to drill holes for tubes to feed through and for LED wires.</li>
+				<li>Double-checking to make sure center hole is the right distance away from the tube holes.</li>
+			</ul>
+			
+			2023-August-29
+			<ul>
+				<li>Start doing presentations (presenting next week Thursday)</li>
+				<li>Cleaned board and tray.</li>
+				<li>Speakers are 8ohms (most likely; bought as a bulk item, so no datasheet)</li>
+				<li>The library has 3D-scanning services, so can use that to get dimensions of speakers for stand.
+					<ul>
+						<li>Could also do it for the trays.</li>
+					</ul>
+				</li>
+			</ul>
+
 			2023-August-24
 			<ul>
 				<li>Finished using the Dremel on the tray.</li>
